--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
+<html>
+    <head>
+        <title>Login</title>
+    </head>
+        <form class="form" action="" method="POST">
+            <div class="form_content">
+                <div class="form_header">Login to your account</div>
+                <input class="form_input" type="email" name="email" placeholder="Email">
+                <input class="form_input" type="password" name="password" placeholder="Password">
+                <button class="form_button" type="submit">Login</button>
+                <div class="form_links">
+                    <a class="form_link" href="#">Register</a>
+                </div>
+            </div>
+    </form>
 </body>
 </html>
+```
